# rules_elixir

./: .bazelrc  BUILD  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-rules_elixir  bazel-testlogs  deps.bzl  elixir.BUILD  elixir_runfiles.bash  elixir_script.template  version.bzl
distro/: BUILD.bazel
impl/: BUILD  BUILD.bazel  autogenerated_helpers.bzl  common.bzl  def.bzl  defs.bzl  docker_elixir.bzl  elixir_escript.bzl  elixir_rules.bzl  elixir_script.template  mix_deps_rules.bzl  mix_lock.bzl  mix_reader.bzl  mix_rules.bzl  mix_runner_template.exs  mix_test.bzl  new_mix_template.exs  providers.bzl  rules.bzl  subtree_copy.bzl
impl/toolchains/: BUILD.bazel
impl/toolchains/elixir/: BUILD.bazel  build_elixir.bzl  common.bzl  elixir_toolchain.bzl  elixir_version.bzl  find_elixir.bzl  from_source.BUILD.template  from_source.bzl  from_system.BUILD  from_system.bzl
impl/toolchains/otp/: BUILD.bazel  common.bzl  copy_erts_headers.escript  erlang_toolchain.bzl  erts_headers.bzl  find_otp.bzl  from_system.BUILD.template  from_system.bzl  otp_version.bzl  prebuilt.BUILD.template  prebuilt.bzl
impl/tools/: BUILD  BUILD.bazel  archiver.ex  autodeps_runner.exs  bazel_test_helper.exs  beam_stripper.ex  cached_deps.ex  copy_elixir_itself.ex  dep_builder.ex  elixir_prim_compiler.exs  load_env_file.exs  mix_autodeps.ex  subtree_copier.ex  symlink_tree.ex
impl/tools/autodeps/: bazel.ex  build_file.ex  build_writer.ex  labeler.ex  lock_indexer.ex  mix_reader.ex  repos_from_lock.ex
impl/tools/lib/: BUILD  bazel.ex  common.ex
impl/tools/lib/autodeps/: BUILD  autodeps.ex  autodeps_recursive.ex  read_mix.ex  read_mix.exs
test/mix/circular_structs/: .gitignore  BUILD  BUILD.autogenerated.bzl  README.md  graph.in  mix.exs  run.exs
test/mix/circular_structs/lib/: BUILD  BUILD.autogenerated.bzl  circular_structs.ex  run.exs  struct_a.ex  struct_b.ex
test/mix/circular_structs/test/: circular_structs_test.exs
test/mix/umbrella/: BUILD  BUILD.autogenerated.bzl  run_proj.exs
test/mix/umbrella/apps/app_one/: .gitignore  mix.exs
test/mix/umbrella/apps/app_one/config/: config.exs
test/mix/umbrella/apps/app_one/lib/: BUILD.autogenerated.bzl  app_one.ex  example_ecto_schema.ex  macros.ex
test/mix/umbrella/apps/app_one/test/: app_one_test.exs
test/mix/umbrella/apps/app_two/: .gitignore  mix.exs
test/mix/umbrella/apps/app_two/config/: config.exs  dev.exs  test.exs
test/mix/umbrella/apps/app_two/lib/: BUILD.autogenerated.bzl  app_two.ex  mock_action.ex  real_action.ex  some_module.ex
test/mix/umbrella/apps/app_two/test/: BUILD  app_two_test.exs  test_helper.exs
test/mix/umbrella/apps/common/: mix.exs
test/mix/umbrella/apps/common/config/: config.exs
test/mix/umbrella/apps/common/lib/: BUILD  BUILD.autogenerated.bzl  common.ex  compiletime_util.ex  macros.ex
test/mix/umbrella/apps/common/test/: common_test.exs
test/mix/umbrella/apps/only_runtime/: .gitignore  README.md  mix.exs
test/mix/umbrella/apps/only_runtime/config/: config.exs
test/mix/umbrella/apps/only_runtime/lib/: BUILD.autogenerated.bzl  only_runtime.ex
test/mix/umbrella/apps/only_runtime/test/: only_runtime_test.exs
test/mix/umbrella/config/: config.exs
test/mix/umbrella/libraries/common_library/: .gitignore  README.md  mix.exs
test/mix/umbrella/libraries/common_library/config/: config.exs
test/mix/umbrella/libraries/common_library/lib/: common_library.ex
test/mix/umbrella/libraries/common_library/test/: common_library_test.exs
test/mix/umbrella/libraries/test_helper_library/: .gitignore  README.md  mix.exs
test/mix/umbrella/libraries/test_helper_library/config/: config.exs
test/mix/umbrella/libraries/test_helper_library/lib/: test_helper_library.ex
test/mix/umbrella/libraries/test_helper_library/test/: test_helper_library_test.exs
test/mix/zzz/: .gitignore  BUILD  README.md  mix.exs
test/mix/zzz/lib/: BUILD  BUILD.autogenerated.bzl  macros.ex  util.ex  zzz.ex
test/mix/zzz/lib/inner/: BUILD.autogenerated.bzl  bleh.ex
test/mix/zzz/test/: zzz_test.exs
test/one_file/: BUILD  a.ex
test/two_files/: BUILD  bottom.ex  other.ex  top.ex
