load("@rules_elixir//impl:elixir_rules.bzl", "elixir_script")

exports_files([
    "elixir_script.template",
    "version.bzl",
])

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "deps.bzl",
        "elixir_script.template",
        "//impl:distribution",
    ],
    visibility = ["//distro:__pkg__"],
)

genrule(
    name = "elixir_runfiles.bash",
    srcs = ["elixir_script.template"],
    outs = ["elixir_runfiles_script.bash"],
    cmd = "sed -e s/%%args%%//g $(SRCS) > $@",
    visibility = ["//visibility:public"],
)

elixir_script(
    name = "mix",
    eval = [
        'File.cd!(System.get_env("BUILD_WORKING_DIRECTORY"))',
        "Mix.start()",
        "Mix.CLI.main()",
    ],
    visibility = ["//visibility:public"],
)
