load("@rules_elixir//impl/toolchains/elixir:elixir_version.bzl", "define_constraint")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

define_constraint()

platform(
    name = "elixir18-linux",
    constraint_values = [
        ":1.8.1",
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "elixir19-linux",
    constraint_values = [
        ":1.9.4",
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "elixir110-linux",
    constraint_values = [
        ":1.10.4",
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)
